--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-    "presets": ["esnext", "react"]
+    "presets": ["@babel/preset-react"],
+    "plugins": ["@babel/plugin-proposal-nullish-coalescing-operator"]
 }
