--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sanity-plugin-input-slider",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Slider input for Sanity-io",
   "main": "dist/index.js",
   "scripts": {
@@ -28,8 +28,9 @@
     "react": "^16.14.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-esnext": "^1.1.3",
-    "babel-preset-react": "^6.24.1"
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/preset-react": "^7.18.6"
   }
 }
