--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,6 @@
 {
-    "presets": ["@babel/preset-react"],
-    "plugins": ["@babel/plugin-proposal-nullish-coalescing-operator"]
+    "presets": [
+        "@babel/env",
+        "@babel/preset-react"
+    ]
 }
