--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sanity-plugin-input-slider",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Slider input for Sanity-io",
   "main": "dist/index.js",
   "scripts": {
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@babel/cli": "^7.18.10",
     "@babel/core": "^7.19.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/preset-env": "^7.19.0",
     "@babel/preset-react": "^7.18.6"
   }
 }
